--- a/style.css
+++ b/style.css
@@ -34,8 +34,9 @@ nav {
 ul li {
   display: inline-block;
   list-style: none;
-  padding: 23px 30px;
+  padding: 0px 30px;
   font-size: 16px;
+  line-height: 70px;
 }
      /*     hamburger     */
 #nav-drawer {
@@ -312,27 +313,14 @@ footer p {
   font-size: 16px;
   color: #FAFAFA;
   text-align: center;
-  padding: 18px 0;
+  line-height: 60px;
 }
 
      /*     レスポンシブ対応     */
-@media screen and (max-width: 1023px) {
-  .profile-box {
-    max-width: 512px;
-  }
-  .profile-text {
-    max-width: 512px;
-  }
-}
 @media screen and (max-width:767px) {
        /*     header     */
   header {
-    width: 90%;
-    margin: 0 5%;
     height: 50px;
-  }
-  .headline {
-    width: 100%;
   }
   .headline img {
     height: 50px;
@@ -343,21 +331,19 @@ footer p {
   }
      /*     mainvisual     */
   .main-visual {
-    width: 90%;
-        margin: 0 5%;
     background-image: url(img/code.png);
   }
   .main-visual h1 {
     font-size: 40px;
-  }
-  .main-visual p {
-    font-size: 18px;
-  }
-     /*     portfolio     */
-  #portfolio {
     width: 90%;
     margin: 0 5%;
   }
+  .main-visual p {
+    font-size: 18px;
+    width: 90%;
+    margin: 0 5%;
+  }
+     /*     portfolio     */
   .portfolio-content {
     width: 90%;
     margin: 0 5%;
@@ -388,10 +374,6 @@ footer p {
     margin: 0 auto;
   }
      /*     feature     */
-  #feature {
-    width: 90%;
-    margin: 0 5%;
-  }
   .feature-content {
     width: 90%;
     margin: 0 5%;
@@ -411,10 +393,6 @@ footer p {
     margin: 0 auto;
   }
        /*     profile     */
-  #profile {
-    width: 90%;
-    margin: 0 5%;
-  }
   .profile-content {
     width: 90%;
     margin: 0 5%;
@@ -435,10 +413,6 @@ footer p {
     padding-top: 20px;
   }
        /*     contact     */
-  #contact {
-    width: 90%;
-    margin: 0 5%;
-  }
   .contact-content {
     width: 90%;
     margin: 0 5%;
@@ -462,10 +436,11 @@ footer p {
     padding-right: 8px;
   }
      /*     footer     */
-    footer {
+    footer p {
     width: 90%;
     margin: 0 5%;
-  }}
+  }
+}
 
 @media screen and (min-width: 767px) {
   #nav-open {
